[project]
name = "probability-ml-foundation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "seaborn>=0.13",
    "plotly>=5.20",
    "scipy>=1.12",
    "great-tables>=0.16",
    "pandas>=2.2",
    "pyfonts>=1.3.0",
]
